@@ -1,3 +1,14 @@
+2012-02-21  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: [Styles] Rule source URL tooltip should show line number
+        https://bugs.webkit.org/show_bug.cgi?id=79087
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/StylesSidebarPane.js:
+        (WebInspector.StylePropertiesSection):
+        (WebInspector.StylePropertiesSection.prototype._createRuleOriginNode):
+
 2012-02-21  Pavel Feldman  <pfeldman@chomium.org>
 
         Web Inspector: clicking empty space should not re-enter edit mode
